feat: add metadata tags to html
-Switch 60fps videos for 30fps
-Add metadata tags
-Change header img

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>AjuFilms</title>
+  <title>AjuFilms | Peliculas de Controle Solar</title>
+  <meta name="description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
