--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
 </head>
-<body>
+<body class="text-stone-900">
   <app-root></app-root>
 </body>
 </html>
