fix(home): incorrect layout on IOS and extra-small screen size

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>AjuFilms | Peliculas de Controle Solar</title>
+  <title>AjuFilms | Películas de Controle Solar</title>
   <meta name="description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
