chore: add SEO and og tags

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,22 @@
   <meta charset="utf-8">
   <title>AjuFilms | Películas de Controle Solar</title>
   <meta name="description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade.">
+  <meta name="keywords" content="películas residenciais, películas comerciais, aplicação de películas, instalação de películas, películas para vidros, películas de proteção solar, películas de privacidade, películas decorativas, películas antivandalismo, películas arquitetônicas, películas para janelas, película térmica, película anti-UV, película controle solar, redução de calor, retenção de calor, isolamento térmico, bloqueio de infravermelho, bloqueio UV, conforto térmico, eficiência energética, redução de consumo de ar-condicionado, economia de energia, sombreamento para vidros, proteção contra calor, redução de calor em residências, redução de calor em comércios, vidro com película térmica, AJU-FILMS, películas em Aracaju, películas em Sergipe, instalação de películas Aracaju, isolamento térmico Sergipe" />
+
+  <!-- open-graph -->
+  <meta property="og:title" content="AjuFilms | Películas de Controle Solar" />
+  <meta property="og:description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade." />
+  <meta property="og:image" content="./images/aju-films-block-black.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="pt-BR" />
+  
+  <!-- twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="AjuFilms | Películas de Controle Solar" />
+  <meta name="twitter:description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade." />
+  <meta name="twitter:image" content="./images/aju-films-block-black.png" />
+
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
