feat: update opengraph url

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
   <title>AjuFilms | Películas de Controle Solar</title>
@@ -9,7 +9,7 @@
   <!-- open-graph -->
   <meta property="og:title" content="AjuFilms | Películas de Controle Solar" />
   <meta property="og:description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade." />
-  <meta property="og:image" content="https://aju-films.vercel.app/images/aju-films-block.png" />
+  <meta property="og:image" content="https://ajufilms.com.br/images/aju-films-block.png" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="pt-BR" />
   
@@ -17,7 +17,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="AjuFilms | Películas de Controle Solar" />
   <meta name="twitter:description" content="AjuFilms - Proteção solar, privacidade e economia para seu ambiente com películas de alta qualidade." />
-  <meta name="twitter:image" content="https://aju-films.vercel.app/images/aju-films-block.png" />
+  <meta name="twitter:image" content="https://ajufilms.com.br/images/aju-films-block.png" />
 
 
   <base href="/">
